opam-version: "2.0"
synopsis: "An opam plugin to test projects"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
license: "MIT"
homepage: "https://github.com/kit-ty-kate/opam-build"
bug-reports: "https://github.com/kit-ty-kate/opam-build/issues"
dev-repo: "git+https://github.com/kit-ty-kate/opam-build.git"
flags: plugin
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.02"}
  "dune" {>= "2.0"}
  "opam-client" {>= "2.2" & < "2.3"}
  "cmdliner" {>= "1.1"}
]
