opam-version: "2.0"
version: "0.2.6"
synopsis: "An opam plugin to test projects"
maintainer: "Kate <kit-ty-kate@exn.st>"
authors: "Kate <kit-ty-kate@exn.st>"
license: "MIT"
homepage: "https://github.com/kit-ty-kate/opam-build"
bug-reports: "https://github.com/kit-ty-kate/opam-build/issues"
dev-repo: "git+https://github.com/kit-ty-kate/opam-build.git"
flags: plugin
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0"}
  "opam-client" {>= "2.5" & < "2.6"}
  "cmdliner" {>= "1.1"}
  "xdg" {>= "3.0.0"}
]
available: opam-version >= "2.5" & opam-version < "2.6"
